// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CaseList Case list while loading data 1`] = `
<button
  className="usa-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Loading...
</button>
`;

exports[`Storyshots CaseList Case list with some data 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          Hello world
        </td>
        <td>
          ABC
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          Hello world2
        </td>
        <td>
          ABC2
        </td>
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots CaseList Empty case list 1`] = `
Array [
  <p>
    No cases found.
  </p>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots DetailNoteDisplay Assignee 1`] = `"Joe was assigned to follow-up on this case."`;

exports[`Storyshots DetailNoteDisplay General comment 1`] = `"This is a general comment."`;

exports[`Storyshots DetailNoteDisplay Trouble ticket 1`] = `
Array [
  "ServiceNow ticket ",
  <a
    href="http://localhost:1111/12345"
  >
    #
    12345
  </a>,
  " was associated with this case.",
]
`;

exports[`Storyshots FormattedDate Last Refresh 1`] = `
<p>
  Last Refresh
  : 
  8/11/2014, 12:00:00 AM
</p>
`;

exports[`Storyshots ReceiptList Empty Receipt List 1`] = `
<p>
  No cases found.
</p>
`;

exports[`Storyshots ReceiptList Snoozed Case List with an open details accordion 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="This case has been previously snoozed"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr
      className="row--show-details"
    >
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE123123"
          target="_elis_viewer"
        >
          FKE123123
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td>
        
      </td>
      <td>
        <a
          href="http://localhost:1111/12345"
          rel="noopener noreferrer"
          target="_blank"
        >
          12345
        </a>
        <br />
      </td>
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr
      className="row--show-details "
    >
      <td
        className="bg-primary-light"
        colSpan={9}
      >
        <h3>
          View Details
        </h3>
      </td>
    </tr>
    <tr
      className="row--show-details"
    >
      <td
        colSpan={2}
      >
        <strong>
          7/11/2019
        </strong>
      </td>
      <td
        colSpan={7}
      >
        ServiceNow ticket 
        <a
          href="http://localhost:1111/12345"
        >
          #
          12345
        </a>
         was associated with this case.
      </td>
    </tr>
    <tr
      className="row--show-details"
    >
      <td
        colSpan={2}
      >
        <strong>
          6/11/2019
        </strong>
      </td>
      <td
        colSpan={7}
      >
        Here's another note
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="This case has been previously snoozed"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Amazingly Successful
      </td>
      <td>
        SP
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Snoozed Case List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="This case has been previously snoozed"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-right fa-w-10 "
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots SnoozeForm Basic snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Reason to snooze this case:
  </label>
  <select
    className="usa-select"
    defaultValue=""
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
  >
    <option
      disabled={true}
      hidden={true}
      value={false}
    >
      - Select Reason -
    </option>
    <option
      value="test_data"
    >
      Test Data - should be deleted
    </option>
    <option
      value="assigned_case"
    >
      Case has been assigned - remind me later
    </option>
    <option
      value="in_proceedings"
    >
      Case is pending removal proceedings - check back later
    </option>
    <option
      value="fo_referral"
    >
      Stuck at field office - awaiting response
    </option>
    <option
      value="technical_issue"
    >
      Technical Issue - awaiting resolution through ServiceNow
    </option>
    <option
      value="bcu"
    >
      Referral to BCU or CFDO
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="caseIssueNotes"
  >
    Case Issue Notes
  </label>
  <textarea
    className="usa-textarea"
    id="caseIssueNotes"
    name="caseIssueNotes"
    onChange={[Function]}
  />
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Snooze for 365 days
  </button>
</form>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Well done!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert dismissible 1`] = `
<div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a success alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a warning alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--info usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      This is some information.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Watch out for this!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;
